# CMake-example

src/: CMakeLists.txt  FEM.cpp  Mesh.cpp  Mesh.h  TODO  UML-Diagram.dia.autosave
src/Conditions/: AbstractCondition.cpp  AbstractCondition.h  CMakeLists.txt  SHT_BC_FirstType.cpp  SHT_BC_FirstType.h  SHT_BC_SecondType.cpp  SHT_BC_SecondType.h  SHT_BC_ThirdType.cpp  SHT_BC_ThirdType.h  SHT_General.cpp  SHT_General.h  UpdatePrioruty.h
src/Elements/: AbstractElementType.cpp  AbstractElementType.h  CMakeLists.txt  ElementType.h  LinearElementType.cpp  LinearElementType.h  PointElementType.cpp  PointElementType.h  TriangularElementType.cpp  TriangularElementType.h
src/Groups/: CMakeLists.txt  Group.cpp  Group.h  GroupList.cpp  GroupList.h  GroupOfLines.cpp  GroupOfLines.h  GroupOfPoints.cpp  GroupOfPoints.h  GroupOfTriangles.cpp  GroupOfTriangles.h
src/LinearAlgebra/: CMakeLists.txt  Matrix.cpp  Matrix.h  TypeDef.h  Vector.cpp  Vector.h
src/Nodes/: CMakeLists.txt  Node.cpp  Node.h  NodeList.cpp  NodeList.h
src/Supplements/: CMakeLists.txt  FilePosition.cpp  FilePosition.h  Printable.cpp  Printable.h
